# FawnFlock

./: .env.development  .env.production  .gitignore  Dockerfile.frontend  FILE_CHECKLIST.md  Father.editorconfig  MOCK_OPTIMIZATION_CHEATSHEET.md  OPTIMIZATION_COMPLETION_NOTICE.md  OPTIMIZATION_SUMMARY.md  PROJECT_INDEX.md  README.md  STYLE_GUIDE.md  TEST_GUIDE.md  VERIFICATION.md  VOICE_FEATURE_SUMMARY.md  devcontainer.json  diagnose-all.sh  diagnosis-report.txt  docker-compose.yml  full-diagnosis.sh  jsconfig.json  package-lock.json  package.json  restart-services.sh  start-voice-services.sh  styleguide.config.js  vue.config.js  数据库构建.docx
back side/: .env
back side/code/: Cargo.toml  README.md
back side/code/src/: config.rs  main.rs  mod.rs  router.rs
back side/code/src/db/: a.rs  mod.rs  schema.rs
back side/code/src/handler/: comment.rs  like.rs  mod.rs  post.rs  test.rs  user.rs  voice.rs  ws.rs
back side/code/src/model/: a_model.rs  comment_model.rs  like_model.rs  mod.rs  post_model.rs  user_model.rs
docs/: BOTTOM_NAVIGATION_OPTIMIZATION.md  CONTACTS_OPTIMIZATION.md  HANDOVER.md  HOMEPAGE_OPTIMIZATION.md  LOGIN_OPTIMIZATION.md  MESSAGES_OPTIMIZATION.md  MOCK_DATACACHE_MIGRATION.md  MOCK_PERFORMANCE_DIAGNOSIS.md  MOCK_PERFORMANCE_SUMMARY.md  MOCK_QUICK_START.md  OPTIMIZATION_COMPLETION_REPORT.md  POST_DETAIL_OPTIMIZATION.md  POST_VOICE_READING.md  QUICK_START.md  VOICE_EMBEDDING_SPEC.md  VOICE_ENROLLMENT_COMPARISON.md  VOICE_ENROLLMENT_OPTIMIZATION.md  VOICE_IMPLEMENTATION_GUIDE.md
mock-backend-service/: Dockerfile  README.md  package-lock.json  package.json  (+1 more)
(+72 files in other folders)
