[package]
name = "fawn"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.72.4", features = ["cors", "websocket", "jwt-auth"] }
tokio = { version = "1.39.3", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
diesel = { version = "2.2.4", features = [
    "mysql",
    "r2d2",
    "chrono",
    "serde_json",
] }
once_cell = "1.19.0"
tokio-stream = { version = "0.1.15", features = ["net"] }
futures-util = { version = "0.3.30", default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "8.0"
