[package]
name = "fawn"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.77.0", features = ["cors", "websocket", "jwt-auth"] }
tokio = { version = "1.39.3", features = ["macros"] }
tracing = "0.1.0"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.113"
diesel = { version = "2.2.4", features = [
    "mysql",
    "r2d2",
    "chrono",
    "serde_json",
] }
once_cell = "1.21.0"
tokio-stream = { version = "0.1.15", features = ["net"] }
futures-util = { version = "0.3.30", default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.1"
rodio = "0.20.1"
base64 = "0.22.1"
byteorder = "1.5.0"
spectrum-analyzer = "1.5.0"
cpal = "0.15.2"
tts = "0.26.3"
